--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,4 +1,8 @@
 name: 'PR Pipeline'
+
+env:
+  TF_VAR_GITHUB_TOKEN: "${{ secrets.TF_API_TOKEN }}"
+
 on:
   push:
     branches: [ "main" ]
@@ -7,6 +11,7 @@ on:
 permissions:
   contents: read
   pull-requests: write
+
 jobs:
   terraform:
     name: 'Terraform'
